# zhuanzhuan_miao

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build-windows.yml  build.yml
.trae/documents/: flutter_ffmpeg_converter_plan.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_ffmpeg_converter/: MainActivity.kt
docs/compose/plans/: 2026-06-25-cross-platform-ffmpeg.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: format_info.dart
lib/pages/: converter_page.dart  home_page.dart
lib/services/: conversion_service.dart  ffmpeg_backend.dart  ffmpeg_backend_desktop.dart  ffmpeg_backend_ffmpeg_kit.dart  ffmpeg_backend_interface.dart  ffmpeg_backend_mobile.dart  ffmpeg_service.dart  test_simple.dart
lib/src/services/: conversion_service.dart  ffmpeg_service.dart  file_service.dart  log_service.dart
lib/src/utils/: converter_utils.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
resources/linux/: ffmpeg
rust_ffmpeg/: Cargo.toml
rust_ffmpeg/src/: error.rs  ffmpeg.rs  lib.rs  task.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
